--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinDelegationAndroid"
         tools:targetApi="31">
+
         <activity
-            android:name=".MainActivity"
+            android:name=".Main"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.KotlinDelegationAndroid">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
